<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signUp"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/form"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--image logo of catering services-->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

            <!--full name textbox-->
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/fullName"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintBottom_toTopOf="@id/dob"
                style="@style/form"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="Date of birth"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintBottom_toTopOf="@id/email"
                style="@style/form"
                android:layout_marginTop="20dp"/>

            <!--email textbox-->
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                app:layout_constraintTop_toBottomOf="@id/dob"
                app:layout_constraintBottom_toTopOf="@id/password"
                style="@style/form"
                android:layout_marginTop="20dp"/>

            <!--password textbox-->
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintBottom_toTopOf="@id/confirmPassword"
                style="@style/form"
                android:layout_marginTop="20dp"/>

            <!--confirm password textbox-->
            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/confirmPass"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintBottom_toTopOf="@id/signUp"
                style="@style/form"
                android:layout_marginTop="20dp"/>

            <!--sign up button-->
            <TextView
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                app:layout_constraintTop_toBottomOf="@id/confirmPassword"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/button"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
